--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: 'Learn Way for Github'
+subheading: '깃허브 런웨이브'
 banner: 'default'
 ---
 
